fix dependency for old clients
