# pkg/api/sgroups/sgroupsconnect/service.connect.go
@@ -96,6 +96,9 @@ const (
 	// SecGroupServiceUpdHostIPSetProcedure is the fully-qualified name of the SecGroupService's
 	// UpdHostIPSet RPC.
 	SecGroupServiceUpdHostIPSetProcedure = "/hbf.v1.sgroups.SecGroupService/UpdHostIPSet"
+	// SecGroupServiceUpdHostInfoProcedure is the fully-qualified name of the SecGroupService's
+	// UpdHostInfo RPC.
+	SecGroupServiceUpdHostInfoProcedure = "/hbf.v1.sgroups.SecGroupService/UpdHostInfo"
 )
 
 // SecGroupServiceClient is a client for the hbf.v1.sgroups.SecGroupService service.
@@ -121,6 +124,7 @@ type SecGroupServiceClient interface {
 	FindIESgSgIcmpRules(context.Context, *connect.Request[sgroups.FindIESgSgIcmpRulesReq]) (*connect.Response[sgroups.IESgSgIcmpRulesResp], error)
 	FindIECidrSgIcmpRules(context.Context, *connect.Request[sgroups.FindIECidrSgIcmpRulesReq]) (*connect.Response[sgroups.IECidrSgIcmpRulesResp], error)
 	UpdHostIPSet(context.Context, *connect.Request[sgroups.UpdHostIPSetReq]) (*connect.Response[empty.Empty], error)
+	UpdHostInfo(context.Context, *connect.Request[sgroups.UpdHostInfoReq]) (*connect.Response[empty.Empty], error)
 }
 
 // NewSecGroupServiceClient constructs a client for the hbf.v1.sgroups.SecGroupService service. By
@@ -260,6 +264,12 @@ func NewSecGroupServiceClient(httpClient connect.HTTPClient, baseURL string, opt
 			connect.WithSchema(secGroupServiceMethods.ByName("UpdHostIPSet")),
 			connect.WithClientOptions(opts...),
 		),
+		updHostInfo: connect.NewClient[sgroups.UpdHostInfoReq, empty.Empty](
+			httpClient,
+			baseURL+SecGroupServiceUpdHostInfoProcedure,
+			connect.WithSchema(secGroupServiceMethods.ByName("UpdHostInfo")),
+			connect.WithClientOptions(opts...),
+		),
 	}
 }
 
@@ -286,6 +296,7 @@ type secGroupServiceClient struct {
 	findIESgSgIcmpRules   *connect.Client[sgroups.FindIESgSgIcmpRulesReq, sgroups.IESgSgIcmpRulesResp]
 	findIECidrSgIcmpRules *connect.Client[sgroups.FindIECidrSgIcmpRulesReq, sgroups.IECidrSgIcmpRulesResp]
 	updHostIPSet          *connect.Client[sgroups.UpdHostIPSetReq, empty.Empty]
+	updHostInfo           *connect.Client[sgroups.UpdHostInfoReq, empty.Empty]
 }
 
 // Sync calls hbf.v1.sgroups.SecGroupService.Sync.
@@ -393,6 +404,11 @@ func (c *secGroupServiceClient) UpdHostIPSet(ctx context.Context, req *connect.R
 	return c.updHostIPSet.CallUnary(ctx, req)
 }
 
+// UpdHostInfo calls hbf.v1.sgroups.SecGroupService.UpdHostInfo.
+func (c *secGroupServiceClient) UpdHostInfo(ctx context.Context, req *connect.Request[sgroups.UpdHostInfoReq]) (*connect.Response[empty.Empty], error) {
+	return c.updHostInfo.CallUnary(ctx, req)
+}
+
 // SecGroupServiceHandler is an implementation of the hbf.v1.sgroups.SecGroupService service.
 type SecGroupServiceHandler interface {
 	Sync(context.Context, *connect.Request[sgroups.SyncReq]) (*connect.Response[empty.Empty], error)
@@ -416,6 +432,7 @@ type SecGroupServiceHandler interface {
 	FindIESgSgIcmpRules(context.Context, *connect.Request[sgroups.FindIESgSgIcmpRulesReq]) (*connect.Response[sgroups.IESgSgIcmpRulesResp], error)
 	FindIECidrSgIcmpRules(context.Context, *connect.Request[sgroups.FindIECidrSgIcmpRulesReq]) (*connect.Response[sgroups.IECidrSgIcmpRulesResp], error)
 	UpdHostIPSet(context.Context, *connect.Request[sgroups.UpdHostIPSetReq]) (*connect.Response[empty.Empty], error)
+	UpdHostInfo(context.Context, *connect.Request[sgroups.UpdHostInfoReq]) (*connect.Response[empty.Empty], error)
 }
 
 // NewSecGroupServiceHandler builds an HTTP handler from the service implementation. It returns the
@@ -551,6 +568,12 @@ func NewSecGroupServiceHandler(svc SecGroupServiceHandler, opts ...connect.Handl
 		connect.WithSchema(secGroupServiceMethods.ByName("UpdHostIPSet")),
 		connect.WithHandlerOptions(opts...),
 	)
+	secGroupServiceUpdHostInfoHandler := connect.NewUnaryHandler(
+		SecGroupServiceUpdHostInfoProcedure,
+		svc.UpdHostInfo,
+		connect.WithSchema(secGroupServiceMethods.ByName("UpdHostInfo")),
+		connect.WithHandlerOptions(opts...),
+	)
 	return "/hbf.v1.sgroups.SecGroupService/", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		switch r.URL.Path {
 		case SecGroupServiceSyncProcedure:
@@ -595,6 +618,8 @@ func NewSecGroupServiceHandler(svc SecGroupServiceHandler, opts ...connect.Handl
 			secGroupServiceFindIECidrSgIcmpRulesHandler.ServeHTTP(w, r)
 		case SecGroupServiceUpdHostIPSetProcedure:
 			secGroupServiceUpdHostIPSetHandler.ServeHTTP(w, r)
+		case SecGroupServiceUpdHostInfoProcedure:
+			secGroupServiceUpdHostInfoHandler.ServeHTTP(w, r)
 		default:
 			http.NotFound(w, r)
 		}
@@ -686,4 +711,8 @@ func (UnimplementedSecGroupServiceHandler) FindIECidrSgIcmpRules(context.Context
 
 func (UnimplementedSecGroupServiceHandler) UpdHostIPSet(context.Context, *connect.Request[sgroups.UpdHostIPSetReq]) (*connect.Response[empty.Empty], error) {
 	return nil, connect.NewError(connect.CodeUnimplemented, errors.New("hbf.v1.sgroups.SecGroupService.UpdHostIPSet is not implemented"))
+}
+
+func (UnimplementedSecGroupServiceHandler) UpdHostInfo(context.Context, *connect.Request[sgroups.UpdHostInfoReq]) (*connect.Response[empty.Empty], error) {
+	return nil, connect.NewError(connect.CodeUnimplemented, errors.New("hbf.v1.sgroups.SecGroupService.UpdHostInfo is not implemented"))
 }
